<?xml version="1.0" encoding="utf-8"?>
<!-- the file /res/layout/setting_layout.xml is used for setting PreferenceActivity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ip_addr_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ip_addr_label" />

        <EditText
            android:id="@+id/ip_addr_setting_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="1234567890."
            android:ems="10"
            android:hint="@string/serverhost_setting_hint" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/savebtn_label" />

</LinearLayout>