<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/next_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TestCourseName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/next_course_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dip"
            android:paddingLeft="20dip"
            android:text="@string/TestCourseID"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cur_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dip"
            android:text="@string/TestCourseID"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/next_course_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:src="@drawable/nextcourse" >
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/order_status_RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@+id/test_course_name"
            android:layout_x="3dip"
            android:layout_y="54dip"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/StartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CookerPanelStartLabel" />

            <RadioButton
                android:id="@+id/FinishBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CookerPanelFinishLabel" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>