<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_list_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/pageControl"
    android:layout_gravity="top|center_horizontal"
    android:background="#38000000"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/courseItemLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/CouseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1"
            android:paddingLeft="20dip"
            android:text="@string/course"
            android:textColor="#CC7906"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CoursePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1"
            android:paddingLeft="180dip"
            android:text="@string/price"
            android:textColor="#CC7906"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/courseNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1"
            android:paddingLeft="340dip"
            android:text="@string/course_no_label"
            android:textColor="#CC7906"
            android:textSize="20sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/OrderList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
    </ListView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TotalPriceLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dip"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1"
            android:textColor="#FFB800"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>